[tool.poetry]
name = "pywallet"
version = "0.1.0"
description = ""
authors = ["shunk-py <auau3700@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
base58 = "^2.0.0"
ecdsa = "^0.15"
six = "^1.14.0"
mnemonic = "^0.19"
pycryptodome = "^3.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
